--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.signed.sandboxes</groupId>
+            <artifactId>lang</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
