--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <version>2.3</version>
         </dependency>
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.signed.sandboxes</groupId>
             <artifactId>lang</artifactId>
             <version>0.0.1-SNAPSHOT</version>
